# open-fang

./: .env.example  .gitignore  AGENTS.md  Containerfile  FANG.md  Makefile  README.md  docker-compose.yml  plan.md  pyproject.toml  v2-plan.md  v3-plan.md  v4-plan.md  v5-plan.md  v6-plan.md  v7-plan.md  v8-plan.md
.github/workflows/: ci.yml  claude-code-review.yml
docs/: OPENFANG_BOOK.md  architecture-tradeoff.md  architecture.md  fang-cli.md  system-design.md  use-cases.md
docs/blocks/: 02-dag-planner.md  03-scheduler.md  08-claim-verifier.md  11-kb-and-graph.md  14-observability.md  README.md
site/: index.html
site/demo/: index.html  sample-graph.json
skills/citation-extraction/: SKILL.md
skills/claim-localization/: SKILL.md
skills/counter-example-generation/: SKILL.md
skills/peer-review/: SKILL.md
skills/reproduction-script/: SKILL.md
src/open_fang/: __init__.py  app.py  chaos_scanner.py  cli.py  models.py  pipeline.py  self_research.py
tests/: conftest.py
tests/evaluation/: test_eval_corpus.py  test_faithfulness_ratio.py  test_five_paper_faithfulness.py  test_mutation_resistance.py  test_progressive_token_reduction.py  test_security_corpus.py  test_skill_compounds.py
tests/fixtures/: briefs.py  mutation_claims.py  paper_data.py  security_briefs.py
tests/integration/: test_api_kb_graph.py  test_api_permissions.py  test_app.py  test_arena_loop.py  test_chaos_recovery.py  test_cli_skill_list.py  test_dogfood_arxiv.py  test_kb_two_runs.py  test_mcp_cli.py  test_memory_endpoints.py  test_multi_hop_synthesis.py  test_pipeline_consumes_skills.py  (+7 more)
(+179 files in other folders)
