[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "open-fang"
version = "0.1.0"
description = "OpenFang: autonomous AI research agent for AI / Agentic AI / Harness Engineering literature."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
dependencies = [
    "harness-core",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "pydantic>=2.0",
    "httpx>=0.26",
    "eval-type-backport>=0.2; python_version < '3.10'",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "httpx>=0.26", "ruff>=0.4"]

[project.scripts]
openfang = "open_fang.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.pytest.ini_options]
addopts = "--import-mode=importlib -m 'not network'"
testpaths = ["tests"]
markers = [
    "network: hits real external APIs; deselected by default (run with -m network)",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
